gateway/ns.yaml
apiVersion: v1
kind: Namespace
metadata:
  labels:
    kubernetes.io/metadata.name: gateway
  name: gateway
spec:
  finalizers:
  - kubernetes
