gateway/http-route.yaml
apiVersion: gateway.networking.k8s.io/v1beta1
kind: HTTPRoute
metadata:
  name: http-audio-transformer-service
spec:
  parentRefs:
    - name: gateway
      namespace: gateway
  rules:
    - matches:
      - path:
          type: PathPrefix
          value: /
      backendRefs:
        - kind: Service
          name: audio-transformer-service-service
          namespace: audio-transformer-service
          port: 3000
